Added some templates and made it look more Base16ey
For those who don't know Base16 is this:

https://github.com/chriskempson/base16

--- a/static/template.html
+++ b/static/template.html
@@ -14,7 +14,8 @@
     <link href="css/global.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet"> 
+    <!-- FILL THIS SHIT IN -->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,17 +27,7 @@
   <body>
 
     <div class="container">
-
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <input type="text" class="form-control" placeholder="Email address" required autofocus>
-        <input type="password" class="form-control" placeholder="Password" required>
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-
+      <h2>what</h2>
     </div> <!-- /container -->
 
 
