Made it go into the right place

--- a/static/home2.html
+++ b/static/home2.html
@@ -60,10 +60,11 @@
       <div class="jumbotron">
         <h1>Welcome back <font id="FillInUserName">...</font></h1>
         <p>Here is your glace area.</p>
-        <p>This area keeps you upto data on realtime data that you always want to see!</p>
+        <p>This area keeps you upto date on realtime data that you always want to see!</p>
+
+        <h3> GDP </h3>
         <div class="demo-container">
-          <div id="placeholder" class="demo-placeholder" style="float:left; width:675px;"></div>
-          <p id="choices" style="float:right; width:135px;"></p>
+          <div id="placeholder" class="demo-placeholder" style="width:370px;"></div>
         </div>
         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Search Data &raquo;</a>
