Added "Add to home"

--- a/static/displaydataset.html
+++ b/static/displaydataset.html
@@ -65,6 +65,9 @@
         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Find Related Data &raquo;</a>
         </p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
+        </p>
       </div>
 
       <!-- Wikidata -->
