--- a/static/maps.html
+++ b/static/maps.html
@@ -79,33 +79,40 @@
     <script src="js/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtGeKRpMVbjE1LBLnA6y4TZat4D7H-GCw&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtGeKRpMVbjE1LBLnA6y4TZat4D7H-GCw&sensor=false&libraries=visualization"></script>
+    <script src="js/GMapsTheme.js"></script>
     <script type="text/javascript">
     // When the window has finished loading create our google map below
     google.maps.event.addDomListener(window, 'load', init);
-
+    taxiData = [];
     function init() {
-        // Basic options for a simple Google Map
-        // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
-        var mapOptions = {
-            // How zoomed in you want the map to start at (always required)
-            zoom: 11,
+      for (var i = 0; i < 1000; i++) {
+        taxiData.push(new google.maps.LatLng(51 + Math.random(), Math.random() * -1))
+      };
+      // Basic options for a simple Google Map
+      // For more options see: https://developers.google.com/maps/documentation/javascript/reference#MapOptions
+      var mapOptions = {
+          zoom: 11,
+          center: new google.maps.LatLng(51.519813,-0.071144),
+          styles: GMapsTheme
+      };
 
-            // The latitude and longitude to center the map (always required)
-            center: new google.maps.LatLng(51.519813,-0.071144), // New York
+      // Get the HTML DOM element that will contain your map 
+      // We are using a div with id="map" seen below in the <body>
+      var mapElement = document.getElementById('map');
 
-            // How you would like to style the map. 
-            // This is where you would paste any style found on Snazzy Maps.
-            styles: [   {     featureType:'water',      elementType:'geometry',     stylers:[       {"visibility":"on"},        {"color":"#aee2e0"}]      },    {     featureType:'landscape',      elementType:'geometry.fill',      stylers:[       {color:'#abce83'}]    },{     featureType:'poi',      elementType:'geometry.fill',      stylers:[       {color:'#769E72'}]    },{     featureType:'poi',      elementType:'labels.text.fill',     stylers:[       {color:'#7B8758'},      ]   },{     featureType:'poi',      elementType:'labels.text.stroke',     stylers:[       {color:'#EBF4A4'},      ]     },{     featureType:'poi.park',     elementType:'geometry',     stylers:[       {visibility:'simplified'},        {color:'#8dab68'}     ]   },{     featureType:'road',     elementType:'geometry.fill',      stylers:[       {visibility:'simplified'},      ]   },{     featureType:'road',     elementType:'labels.text.fill',     stylers:[       {color:'#5B5B3F'}     ]   },{     featureType:'road',     elementType:'labels.text.stroke',     stylers:[       {color:'#ABCE83'}     ]   },{     featureType:'road',     elementType:'labels.icon',      stylers:[       {visibility:'off'}      ]     },{     featureType:'road.local',     elementType:'geometry',     stylers:[       {color:'#A4C67D'},      ]   },{     featureType:'road.arterial',      elementType:'geometry',     stylers:[       {color:'#9BBF72'}     ]   },{     featureType:'road.highway',     elementType:'geometry',     stylers:[       {color:'#EBF4A4'}     ]   },{     featureType:'transit',      stylers:[       {visibility:'off'}      ]     },{     featureType:'administrative',     elementType:'geometry.stroke',      stylers:[       {visibility:'on'},        {color:'#87ae79'}     ]   },{     featureType:'administrative',     elementType:'geometry.fill',      stylers:[       {color:'#7f2200'},        {visibility:'off'}      ]   },{     featureType:'administrative',     elementType:'labels.text.stroke',     stylers:[       {color:'#ffffff'},        {visibility:'on'},        {weight:4.1}      ]   },{     featureType:'administrative',     elementType:'labels.text.fill',     stylers:[       {color:'#495421'},      ]         },{     featureType:'administrative.neighborhood',      elementType:'labels',     stylers:[{visibility:'off'}]    } ]
-        };
+      // Create the Google Map using out element and options defined above
+      var map = new google.maps.Map(mapElement, mapOptions);
 
-        // Get the HTML DOM element that will contain your map 
-        // We are using a div with id="map" seen below in the <body>
-        var mapElement = document.getElementById('map');
+      var pointArray = new google.maps.MVCArray(taxiData);
 
-        // Create the Google Map using out element and options defined above
-        var map = new google.maps.Map(mapElement, mapOptions);
+      heatmap = new google.maps.visualization.HeatmapLayer({
+        data: pointArray
+      });
+      heatmap.set('radius', heatmap.get('radius') ? null : 20);
+      heatmap.setMap(map);
     }
+
     </script>
 
   </body>
