--- a/static/maps.html
+++ b/static/maps.html
@@ -125,9 +125,8 @@
               data: []
           }
         ];
-        // [1988, 3813], [1989, 3719], [1990, 3722], [1991, 3789], [1992, 3720], [1993, 3730], [1994, 3636], [1995, 3598], [1996, 3610], [1997, 3655], [1998, 3695], [1999, 3673], [2000, 3553], [2001, 3774], [2002, 3728], [2003, 3618], [2004, 3638], [2005, 3467], [2006, 3770]
         for (var i = 0; i < 18; i++) {
-          datasets[0].data.push([y+i,Math.sin(i/6)]);
+          datasets[0].data.push([y+i,Math.sin(i/7) + Math.random()/6]);
         };
 
 
