--- a/public/signin.html
+++ b/public/signin.html
@@ -26,7 +26,7 @@
   <body>
 
     <div class="container">
-      <form class="form-signin">
+      <form class="form-signin" action="/noauth/login.json" method="POST" >
         <h2 class="form-signin-heading">DataCon - Please sign in</h2>
         <input type="text" class="form-control" placeholder="Email address" required autofocus>
         <input type="password" class="form-control" placeholder="Password" required>
