--- a/public/signin.html
+++ b/public/signin.html
@@ -28,11 +28,11 @@
     <div class="container">
       <form class="form-signin" action="/noauth/login.json" method="POST" >
         <h2 class="form-signin-heading">DataCon - Please sign in</h2>
-        <input type="text" class="form-control" placeholder="Email address" required autofocus>
-        <input type="password" class="form-control" placeholder="Password" required>
-        <label class="checkbox">
+        <input name="username" type="text" class="form-control" placeholder="Email address" required autofocus>
+        <input name="password" type="password" class="form-control" placeholder="Password" required>
+<!--         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
-        </label>
+        </label> -->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
     </div> <!-- /container -->
