--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -81,9 +81,9 @@ GDP is related to national accounts, a subject in macroeconomics. GDP is not to 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-    <script src="../../dist/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
     <script type="text/javascript">
 
       $(function() {
