--- a/public/template.html
+++ b/public/template.html
@@ -72,7 +72,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery-1.10.2.min.js"></script>
-    <script src="../../dist/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/dist/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
