--- a/public/index.html
+++ b/public/index.html
@@ -74,5 +74,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/home.js"></script>
   </body>
 </html>
