Changed a lot of files

--- a/public/signin.html
+++ b/public/signin.html
@@ -10,8 +10,8 @@
     <title>Signin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/global.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/global.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/signin.css" rel="stylesheet">
