--- a/public/template.html
+++ b/public/template.html
@@ -12,8 +12,8 @@
     <title>DataCon - Add Title</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/css/global.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/global.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DataCon</a>
+          <a class="navbar-brand" href="/">DataCon</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
