--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         <p>It looks pretty lonley here!</p>
         <p>Why don't you go and add some data that you are interseted in?</p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Search Data &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="search.html" role="button">Search Data &raquo;</a>
         </p>
       </div>
 
