--- a/public/processing.html
+++ b/public/processing.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>DataCon - Search</title>
+    <title>DataCon - Importing Data</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
@@ -58,11 +58,9 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Search</h1>
-        <input class="form-control input-sm" type="text" id="SBox" placeholder="Enter your query here">
-        <table class="table" id="ResultsTable">
-          <tr><td>Name</td><td>Link</td></tr>
-        </table>
+        <h1>Importing Data...</h1>
+        <p>Hold on while we fetch this unit of data and process it.</p>
+        <p>The page will automatically refresh when more infomation is avalible.</p>
       </div>
 
     </div> <!-- /container -->
@@ -73,6 +71,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/search.js"></script>
   </body>
 </html>
