--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+    <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../docs-assets/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
