--- a/public/processing.html
+++ b/public/processing.html
@@ -71,5 +71,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/processing.js"></script>
   </body>
 </html>
