--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -18,7 +18,7 @@
 
     <!-- Custom styles for this template -->
     <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
-    
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -81,5 +81,6 @@ GDP is related to national accounts, a subject in macroeconomics. GDP is not to 
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/view.js"></script>
   </body>
 </html>
