--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -1,80 +1,89 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>DataCon - Home</title>
+  <title>DataCon - Home</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/global.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="/assets/css/bootstrap.css" rel="stylesheet">
+  <link href="/assets/css/global.css" rel="stylesheet">
 
 
-    <!-- Custom styles for this template -->
-    <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
+  <!-- Custom styles for this template -->
+  <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
+      <![endif]-->
+    </head>
 
-  <body>
+    <body>
 
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">DataCon</a>
+      <!-- Fixed navbar -->
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">DataCon</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a class="online" href="#">Online</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a class="online" href="#">Online</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
-    </div>
 
-    <div class="container">
+      <div class="container">
 
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Viewing Dataset <font id="FillInDataSet">...</font></h1>
-        <div class="demo-container">
-          <div id="placeholder" class="demo-placeholder" style="width:370px;"></div>
-        </div>
-        <p>
+        <!-- Main component for a primary marketing message or call to action -->
+        <div class="jumbotron">
+          <h1>Viewing Dataset <font id="FillInDataSet">...</font></h1>
+          <div class="demo-container">
+            <div id="placeholder" class="demo-placeholder" style="width:570px;"></div>
+          </div>
+          Override X Axis:
+          <select id="pickxaxis" onchange="ReJigGraph()">
+            <option>Loading...</option>
+          </select>
+        </br>
+        Override Y Axis:
+        <select id="pickyaxis" onchange="ReJigGraph()">
+          <option>Loading...</option>
+        </select>
+<!--         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Find Related Data &raquo;</a>
         </p>
         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
-        </p>
+        </p> -->
       </div>
 
       <!-- Wikidata -->
       <div class="container wikidata">
         <h2> Wikipedia for GDP </h2>
         <p>Gross domestic product (GDP) is the market value of all officially recognized final goods and services produced within a country in a given period of time. GDP per capita is often considered an indicator of a country's standard of living.
-GDP per capita is not a measure of personal income (See Standard of living and GDP). Under economic theory, GDP per capita exactly equals the gross domestic income (GDI) per capita (See Gross domestic income).
-GDP is related to national accounts, a subject in macroeconomics. GDP is not to be confused with gross national product (GNP) which allocates production based on ownership.</p>
-      </div>
-    </div> <!-- /container -->
+          GDP per capita is not a measure of personal income (See Standard of living and GDP). Under economic theory, GDP per capita exactly equals the gross domestic income (GDI) per capita (See Gross domestic income).
+          GDP is related to national accounts, a subject in macroeconomics. GDP is not to be confused with gross national product (GNP) which allocates production based on ownership.</p>
+        </div>
+      </div> <!-- /container -->
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -83,4 +92,4 @@ GDP is related to national accounts, a subject in macroeconomics. GDP is not to 
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/view.js"></script>
   </body>
-</html>
+  </html>
