Adding some skel files

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -68,9 +68,9 @@
         <select id="pickyaxis" onchange="ReJigGraph()">
           <option>Loading...</option>
         </select>
-        <p>
-          <a class="btn btn-lg btn-primary" href="#" id="SetupOverlay" role="button">Overlay data &raquo;</a>
-        </p>
+<!--         <p>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Overlay &raquo;</a>
+        </p> -->
 <!--         <p>
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
         </p> -->
@@ -78,10 +78,8 @@
 
       <!-- Wikidata -->
       <div class="container wikidata">
-        <h2> Wikipedia for GDP </h2>
-        <p>Gross domestic product (GDP) is the market value of all officially recognized final goods and services produced within a country in a given period of time. GDP per capita is often considered an indicator of a country's standard of living.
-          GDP per capita is not a measure of personal income (See Standard of living and GDP). Under economic theory, GDP per capita exactly equals the gross domestic income (GDI) per capita (See Gross domestic income).
-          GDP is related to national accounts, a subject in macroeconomics. GDP is not to be confused with gross national product (GNP) which allocates production based on ownership.</p>
+        <h2> Loading... </h2>
+        <p>Hold on.</p>
         </div>
       </div> <!-- /container -->
     <!-- Bootstrap core JavaScript
