Overlay's now work in the most raw sence

--- a/public/overlay.html
+++ b/public/overlay.html
@@ -59,21 +59,25 @@
           <div class="demo-container">
             <div id="placeholder" class="demo-placeholder" style="width:570px;"></div>
           </div>
-          Override X Axis:
-          <select id="pickxaxis" onchange="ReJigGraph()">
+          Override X1 Axis:
+          <select id="pickx1axis" onchange="ReJigGraph()">
             <option>Loading...</option>
           </select>
         </br>
-        Override Y Axis:
-        <select id="pickyaxis" onchange="ReJigGraph()">
-          <option>Loading...</option>
-        </select>
-<!--         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Overlay &raquo;</a>
-        </p> -->
-<!--         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
-        </p> -->
+          Override Y1 Axis:
+          <select id="picky1axis" onchange="ReJigGraph()">
+            <option>Loading...</option>
+          </select>
+        </br>
+          Override X2 Axis:
+          <select id="pickx2axis" onchange="ReJigGraph()">
+            <option>Loading...</option>
+          </select>
+        </br>
+          Override Y2 Axis:
+          <select id="picky2axis" onchange="ReJigGraph()">
+            <option>Loading...</option>
+          </select>
       </div>
 
       <!-- Wikidata -->
@@ -88,6 +92,6 @@
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/view.js"></script>
+    <script src="/assets/js/overlay.js"></script>
   </body>
   </html>
