--- a/public/overlay.html
+++ b/public/overlay.html
@@ -14,6 +14,7 @@
   <!-- Bootstrap core CSS -->
   <link href="/assets/css/bootstrap.css" rel="stylesheet">
   <link href="/assets/css/global.css" rel="stylesheet">
+  <link href="/assets/css/xcharts.css" rel="stylesheet">
 
 
   <!-- Custom styles for this template -->
@@ -91,6 +92,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
+    <script src="/assets/js/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/assets/js/xcharts.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/overlay.js"></script>
   </body>
