getting crazy with d3.js && xcharts.js

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -89,7 +89,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/assets/js/jquery-1.10.2.min.js"></script>
-    <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>    
+    <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script    
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/d3.v3.min.js" charset="utf-8"></script>
     <script src="/assets/js/xcharts.js"></script>
