a lot of changes ...

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -13,8 +13,11 @@
 
   <!-- Bootstrap core CSS -->
   <link href="/assets/css/bootstrap.css" rel="stylesheet">
-  <link href="/assets/css/global.css" rel="stylesheet">
+  <link href="/assets/css/layout.min.css" rel="stylesheet">
+  
   <link href="/assets/css/xcharts.css" rel="stylesheet">
+
+  <!--link href="/assets/css/graphs.min.css" rel="stylesheet"-->
 
 
   <!-- Custom styles for this template -->
@@ -93,6 +96,7 @@
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="/assets/js/d3.v3.min.js" charset="utf-8"></script>
     <script src="/assets/js/xcharts.js"></script>
+    <script src="/assets/js/common.js"></script>
     <script src="/assets/js/view.js"></script>
   </body>
   </html>
