--- a/public/signin.html
+++ b/public/signin.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/global.css" rel="stylesheet">
+    <link href="/assets/css/layout.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="assets/css/signin.css" rel="stylesheet">
