--- a/public/template.html
+++ b/public/template.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/global.css" rel="stylesheet">
+    <link href="/assets/css/layout.min.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
