--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -98,5 +98,14 @@
     <script src="/assets/js/xcharts.js"></script>
     <script src="/assets/js/common.js"></script>
     <script src="/assets/js/view.js"></script>
+    <script src="/assets/js/jquery-annotate.js"></script>
+    <script>
+      function blackNote() {
+        return $(document.createElement('span')).addClass('black circle note')
+      }
+        
+      $('#placeholder').annotatableImage(blackNote);
+    </script>
+
   </body>
   </html>
