--- a/public/processing.html
+++ b/public/processing.html
@@ -12,7 +12,7 @@
     <title>DataCon - Importing Data</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/layout.min.css" rel="stylesheet">
 
 
@@ -69,8 +69,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/jquery-1.10.2.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/processing.js"></script>
   </body>
 </html>
