--- a/public/home2.html
+++ b/public/home2.html
@@ -12,7 +12,7 @@
     <title>DataCon - Home</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/layout.min.css" rel="stylesheet">
 
 
@@ -77,9 +77,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-    <script src="../../dist/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript">
 
   $(function() {
