--- a/public/overlay.html
+++ b/public/overlay.html
@@ -12,7 +12,7 @@
   <title>DataCon - Home</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/assets/css/bootstrap.css" rel="stylesheet">
+  <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
   <link href="/assets/css/layout.min.css" rel="stylesheet">
   <link href="/assets/css/graphs.min.css" rel="stylesheet">
 
@@ -94,11 +94,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/jquery-1.10.2.min.js"></script>
-    <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-    <script src="/assets/js/d3.v3.min.js" charset="utf-8"></script>
-    <script src="/assets/js/xcharts.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/common.js"></script>
     <script src="/assets/js/overlay.js"></script>
   </body>
