--- a/public/signin.html
+++ b/public/signin.html
@@ -10,7 +10,7 @@
     <title>Signin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/layout.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
