Add the grid.html

--- a/public/grid.html
+++ b/public/grid.html
@@ -58,12 +58,10 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
+        <h1>Grid for the Dataset <font id="FillInDataSet">...</font></h1>
+        <table id="GridTable">
+
+        </table
       </div>
 
     </div> <!-- /container -->
@@ -72,7 +70,14 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
-    <script src="/dist/assets/js/lib/bootstrap.min.js"></script>
+    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>    
+    <script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/assets/js/lib/bootstrap.min.js"></script>
+    <script src="/assets/js/lib/underscore.min.js"></script>
+    <script src="/assets/js/lib/backbone.min.js"></script>
+    <script src="/assets/js/PGChartPoint.js"></script>
+    <script src="/assets/js/PGChart.js"></script>
+    <script src="/assets/js/common.js"></script>
+    <script src="/assets/js/view.js"></script>
   </body>
 </html>
