--- a/public/grid.html
+++ b/public/grid.html
@@ -78,6 +78,6 @@
     <script src="/assets/js/PGChartPoint.js"></script>
     <script src="/assets/js/PGChart.js"></script>
     <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/view.js"></script>
+    <script src="/assets/js/grid.js"></script>
   </body>
 </html>
