--- a/public/bubble.html
+++ b/public/bubble.html
@@ -115,8 +115,11 @@
     <script src="/assets/js/lib/backbone.min.js"></script>
     <script src="/assets/js/PGChartPoint.js"></script>
     <script src="/assets/js/PGChart.js"></script>
+    <script src="/assets/js/bubble.js"></script>
+    <!--
     <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/view.js"></script>
+    <script src="/assets/js/view.js"></script> 
+    -->
 
   </body>
   </html>
