--- a/public/bubble.html
+++ b/public/bubble.html
@@ -84,7 +84,7 @@
 
       
     </div> <!-- /container -->
-
+<!--
     <script type="text/html" id="pointDataTemplate">
       <% 
          !data.title && (data.title='');
@@ -101,7 +101,7 @@
           </form>
         </div>
       </div>
-    </script>
+    </script>-->
 
 
 
