Added a link to get the bubble chart

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -67,6 +67,23 @@
               <p>Hold on.</p>
             </div>
           </div>
+          Override X Axis:
+          <select id="pickxaxis" onchange="ReJigGraph()">
+            <option>Loading...</option>
+          </select>
+        </br>
+        Override Y Axis:
+        <select id="pickyaxis" onchange="ReJigGraph()">
+          <option>Loading...</option>
+        </select>
+        <p>
+          <a class="btn btn-lg btn-primary" href="#" id="SetupOverlay" role="button">Overlay data &raquo;</a>
+        </p>
+<!--         <p>
+          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
+        </p> -->
+              <a id="BubbleLink" href="#">View as Bubble chart</a>
+      </div>
 
           <div class="row">
             Override X Axis:
