Axis are now shown inside the bubble thing.
A move to make it less static since right now its just a hard coded static url
:eek:

--- a/public/bubble.html
+++ b/public/bubble.html
@@ -115,11 +115,8 @@
     <script src="/assets/js/lib/backbone.min.js"></script>
     <script src="/assets/js/PGChartPoint.js"></script>
     <script src="/assets/js/PGChart.js"></script>
+    <script src="/assets/js/bubble_pre.js"></script>
     <script src="/assets/js/bubble.js"></script>
-    <!--
-    <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/view.js"></script> 
-    -->
 
   </body>
   </html>
