--- a/public/grid.html
+++ b/public/grid.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
     <link href="/assets/css/layout.min.css" rel="stylesheet">
+    <link href="/assets/css/charts.min.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
@@ -54,17 +55,14 @@
       </div>
     </div>
 
-    <div class="container">
-
+    <div class="jumbotron">
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <div class="container">
         <h1>Grid for the Dataset <font id="FillInDataSet">...</font></h1>
         <table id="GridTable">
-
-        </table
-      </div>
-
-    </div> <!-- /container -->
+        </table>
+      </div> <!-- /container -->
+    </div> <!-- /jumbotron -->
 
 
     <!-- Bootstrap core JavaScript
@@ -75,9 +73,11 @@
     <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/lib/underscore.min.js"></script>
     <script src="/assets/js/lib/backbone.min.js"></script>
+
+    <script src="/assets/js/common.js"></script>
     <script src="/assets/js/PGChartPoint.js"></script>
     <script src="/assets/js/PGChart.js"></script>
-    <script src="/assets/js/common.js"></script>
+    <script src="/assets/js/PGLinesChart.js"></script>
     <script src="/assets/js/grid.js"></script>
   </body>
 </html>
