--- a/public/processing.html
+++ b/public/processing.html
@@ -54,16 +54,13 @@
       </div>
     </div>
 
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+    <div class="jumbotron">
+      <div class="container">
         <h1>Importing Data...</h1>
         <p>Hold on while we fetch this unit of data and process it.</p>
         <p>The page will automatically refresh when more infomation is avalible.</p>
-      </div>
-
-    </div> <!-- /container -->
+      </div> <!-- /container -->
+    </div> <!-- /jumbotron -->
 
 
     <!-- Bootstrap core JavaScript
