--- a/public/search.html
+++ b/public/search.html
@@ -54,18 +54,15 @@
       </div>
     </div>
 
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+    <div class="jumbotron">
+      <div class="container">
         <h1>Search</h1>
         <input class="form-control input-sm" type="text" id="SBox" placeholder="Enter your query here">
         <table class="table" id="ResultsTable">
           <tr><td>Name</td><td>Link</td></tr>
         </table>
-      </div>
-
-    </div> <!-- /container -->
+      </div> <!-- /container -->
+    </div> <!-- /jumbotron -->
 
 
     <!-- Bootstrap core JavaScript
