--- a/public/index.html
+++ b/public/index.html
@@ -54,19 +54,16 @@
       </div>
     </div>
 
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+    <div class="jumbotron">
+      <div class="container">      
         <h1>Welcome back <font id="FillInUserName">...</font></h1>
         <p>It looks pretty lonley here!</p>
         <p>Why don't you go and add some data that you are interseted in?</p>
         <p>
           <a class="btn btn-lg btn-primary" href="search.html" role="button">Search Data &raquo;</a>
         </p>
-      </div>
-
-    </div> <!-- /container -->
+      </div> <!-- /container -->
+    </div> <!-- /jumbotron -->
 
 
     <!-- Bootstrap core JavaScript
