--- a/public/bubble.html
+++ b/public/bubble.html
@@ -66,12 +66,12 @@
             </div>
           </div>
           Override X Axis:
-          <select id="pickxaxis" onchange="ReJigGraph()">
+          <select id="pickxaxis">
             <option>Loading...</option>
           </select>
         </br>
         Override Y Axis:
-        <select id="pickyaxis" onchange="ReJigGraph()">
+        <select id="pickyaxis">
           <option>Loading...</option>
         </select>
         <p>
