--- a/public/signin.html
+++ b/public/signin.html
@@ -28,6 +28,7 @@
     <div class="container">
       <form class="form-signin" action="/noauth/login.json" method="POST" >
         <h2 class="form-signin-heading">DataCon - Please sign in</h2>
+        <font color="#FF0000">{{.}}</font>
         <input name="username" type="text" class="form-control" placeholder="Email address" required autofocus>
         <input name="password" type="password" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
